# AOC

./: .gitignore  aoc.cabal  flake.nix  scripts.nix
nix/: streamly.nix
src/Streams2021/: Day1.hs  Day2.hs  Day3.hs
